--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
     "nanoid": "^3.3.4"
+  },
+  "optionalDependencies": {
+    "win-node-env": "^0.6.1"
   }
 }
