--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "start-prod": "NODE_ENV=production node ./src/server.js",
+    "start_windows": "set NODE_ENV=production&&node server.js",
     "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src"
   },
